--- a/index.html
+++ b/index.html
@@ -1025,182 +1025,182 @@
                 <a href="" class="catgrid__a">
                   <img src="/assets/img/category-background1.jpg" alt="" class="catgrid__background" />
                   <span class="catgrid__name">Acción</span>
-                  <img src="/assets/img/category-icon1.png" alt="" class="catgrid__icon" />
+                  <img src="/assets/img/category-icon1.png" alt="Acción" class="catgrid__icon" />
                 </a>
               </li>
               <li class="catgrid__cat">
                 <a href="" class="catgrid__a">
                   <img src="/assets/img/category-background2.jpg" alt="" class="catgrid__background" />
-                  <span class="catgrid__name">Acción</span>
-                  <img src="/assets/img/category-icon2.png" alt="" class="catgrid__icon" />
+                  <span class="catgrid__name">Arcade</span>
+                  <img src="/assets/img/category-icon2.png" alt="Arcade" class="catgrid__icon" />
                 </a>
               </li>
               <li class="catgrid__cat">
                 <a href="" class="catgrid__a">
                   <img src="/assets/img/category-background4.jpg" alt="" class="catgrid__background" />
-                  <span class="catgrid__name">Acción</span>
-                  <img src="" alt="" class="catgrid__icon" />
+                  <span class="catgrid__name">Aventura</span>
+                  <img src="/assets/img/category-icon4.png" alt="Aventuras" class="catgrid__icon" />
                 </a>
               </li>
               <li class="catgrid__cat">
                 <a href="" class="catgrid__a">
                   <img src="/assets/img/category-background5.jpg" alt="" class="catgrid__background" />
-                  <span class="catgrid__name">Acción</span>
-                  <img src="" alt="" class="catgrid__icon" />
+                  <span class="catgrid__name">Beat'em all</span>
+                  <img src="/assets/img/category-icon5.png" alt="Beat'em all" class="catgrid__icon" />
                 </a>
               </li>
               <li class="catgrid__cat">
                 <a href="" class="catgrid__a">
                   <img src="/assets/img/category-background8.jpg" alt="" class="catgrid__background" />
-                  <span class="catgrid__name">Acción</span>
-                  <img src="" alt="" class="catgrid__icon" />
+                  <span class="catgrid__name">Carreras</span>
+                  <img src="/assets/img/category-icon8.png" alt="Carreras" class="catgrid__icon" />
                 </a>
               </li>
               <li class="catgrid__cat">
                 <a href="" class="catgrid__a">
                   <img src="/assets/img/category-background24.jpg" alt="" class="catgrid__background" />
-                  <span class="catgrid__name">Acción</span>
-                  <img src="" alt="" class="catgrid__icon" />
+                  <span class="catgrid__name">Cooperación</span>
+                  <img src="/assets/img/category-icon24.png" alt="Cooperación" class="catgrid__icon" />
                 </a>
               </li>
               <li class="catgrid__cat">
                 <a href="" class="catgrid__a">
                   <img src="/assets/img/category-background54.jpg" alt="" class="catgrid__background" />
-                  <span class="catgrid__name">Acción</span>
-                  <img src="" alt="" class="catgrid__icon" />
+                  <span class="catgrid__name">Cooperativo local</span>
+                  <img src="/assets/img/category-icon54.png" alt="Cooperativo local" class="catgrid__icon" />
                 </a>
               </li>
               <li class="catgrid__cat">
                 <a href="" class="catgrid__a">
                   <img src="/assets/img/category-background53.jpg" alt="" class="catgrid__background" />
-                  <span class="catgrid__name">Acción</span>
-                  <img src="" alt="" class="catgrid__icon" />
+                  <span class="catgrid__name">Cooperativo online</span>
+                  <img src="/assets/img/category-icon53.png" alt="Cooperativo online" class="catgrid__icon" />
                 </a>
               </li>
               <li class="catgrid__cat">
                 <a href="" class="catgrid__a">
                   <img src="/assets/img/category-background16.jpg" alt="" class="catgrid__background" />
-                  <span class="catgrid__name">Acción</span>
-                  <img src="" alt="" class="catgrid__icon" />
+                  <span class="catgrid__name">Deporte</span>
+                  <img src="/assets/img/category-icon16.png" alt="Deporte" class="catgrid__icon" />
                 </a>
               </li>
               <li class="catgrid__cat">
                 <a href="" class="catgrid__a">
                   <img src="/assets/img/category-background37.jpg" alt="" class="catgrid__background" />
-                  <span class="catgrid__name">Acción</span>
-                  <img src="" alt="" class="catgrid__icon" />
+                  <span class="catgrid__name">Early Access</span>
+                  <img src="/assets/img/category-icon37.png" alt="Early Access" class="catgrid__icon" />
                 </a>
               </li>
               <li class="catgrid__cat">
                 <a href="" class="catgrid__a">
                   <img src="/assets/img/category-background17.jpg" alt="" class="catgrid__background" />
-                  <span class="catgrid__name">Acción</span>
-                  <img src="" alt="" class="catgrid__icon" />
+                  <span class="catgrid__name">Estrategia</span>
+                  <img src="/assets/img/category-icon17.png" alt="Estrategia" class="catgrid__icon" />
                 </a>
               </li>
               <li class="catgrid__cat">
                 <a href="" class="catgrid__a">
                   <img src="/assets/img/category-background9.jpg" alt="" class="catgrid__background" />
-                  <span class="catgrid__name">Acción</span>
-                  <img src="" alt="" class="catgrid__icon" />
+                  <span class="catgrid__name">FPS</span>
+                  <img src="/assets/img/category-icon9.png" alt="FPS" class="catgrid__icon" />
                 </a>
               </li>
               <li class="catgrid__cat">
                 <a href="" class="catgrid__a">
                   <img src="/assets/img/category-background35.jpg" alt="" class="catgrid__background" />
-                  <span class="catgrid__name">Acción</span>
-                  <img src="" alt="" class="catgrid__icon" />
+                  <span class="catgrid__name">Free to Play</span>
+                  <img src="/assets/img/category-icon35.png" alt="Free to Play" class="catgrid__icon" />
                 </a>
               </li>
               <li class="catgrid__cat">
                 <a href="" class="catgrid__a">
                   <img src="/assets/img/category-background10.jpg" alt="" class="catgrid__background" />
-                  <span class="catgrid__name">Acción</span>
-                  <img src="" alt="" class="catgrid__icon" />
+                  <span class="catgrid__name">Gestión</span>
+                  <img src="/assets/img/category-icon10.png" alt="Gestión" class="catgrid__icon" />
                 </a>
               </li>
               <li class="catgrid__cat">
                 <a href="" class="catgrid__a">
                   <img src="/assets/img/category-background32.jpg" alt="" class="catgrid__background" />
-                  <span class="catgrid__name">Acción</span>
-                  <img src="" alt="" class="catgrid__icon" />
+                  <span class="catgrid__name">Indies</span>
+                  <img src="/assets/img/category-icon32.png" alt="Indies" class="catgrid__icon" />
                 </a>
               </li>
               <li class="catgrid__cat">
                 <a href="" class="catgrid__a">
                   <img src="/assets/img/category-background7.jpg" alt="" class="catgrid__background" />
-                  <span class="catgrid__name">Acción</span>
-                  <img src="" alt="" class="catgrid__icon" />
+                  <span class="catgrid__name">Lucha</span>
+                  <img src="/assets/img/category-icon7.png" alt="Lucha" class="catgrid__icon" />
                 </a>
               </li>
               <li class="catgrid__cat">
                 <a href="" class="catgrid__a">
                   <img src="/assets/img/category-background12.jpg" alt="" class="catgrid__background" />
-                  <span class="catgrid__name">Acción</span>
-                  <img src="" alt="" class="catgrid__icon" />
+                  <span class="catgrid__name">MMO</span>
+                  <img src="/assets/img/category-icon12.png" alt="MMO" class="catgrid__icon" />
                 </a>
               </li>
               <li class="catgrid__cat">
                 <a href="" class="catgrid__a">
                   <img src="/assets/img/category-background23.jpg" alt="" class="catgrid__background" />
-                  <span class="catgrid__name">Acción</span>
-                  <img src="" alt="" class="catgrid__icon" />
+                  <span class="catgrid__name">Multijugador</span>
+                  <img src="/assets/img/category-icon23.png" alt="Multijugador" class="catgrid__icon" />
                 </a>
               </li>
               <li class="catgrid__cat">
                 <a href="" class="catgrid__a">
                   <img src="/assets/img/category-background13.jpg" alt="" class="catgrid__background" />
-                  <span class="catgrid__name">Acción</span>
-                  <img src="" alt="" class="catgrid__icon" />
+                  <span class="catgrid__name">Plataformas</span>
+                  <img src="/assets/img/category-icon13.png" alt="Plataformas" class="catgrid__icon" />
                 </a>
               </li>
               <li class="catgrid__cat">
                 <a href="" class="catgrid__a">
                   <img src="/assets/img/category-background51.jpg" alt="" class="catgrid__background" />
-                  <span class="catgrid__name">Acción</span>
-                  <img src="" alt="" class="catgrid__icon" />
+                  <span class="catgrid__name">PvP online</span>
+                  <img src="/assets/img/category-icon51.png" alt="PvP online" class="catgrid__icon" />
                 </a>
               </li>
               <li class="catgrid__cat">
                 <a href="" class="catgrid__a">
                   <img src="/assets/img/category-background11.jpg" alt="" class="catgrid__background" />
-                  <span class="catgrid__name">Acción</span>
-                  <img src="" alt="" class="catgrid__icon" />
+                  <span class="catgrid__name">RPG</span>
+                  <img src="/assets/img/category-icon11.png" alt="RPG" class="catgrid__icon" />
                 </a>
               </li>
               <li class="catgrid__cat">
                 <a href="" class="catgrid__a">
                   <img src="/assets/img/category-background55.jpg" alt="" class="catgrid__background" />
-                  <span class="catgrid__name">Acción</span>
-                  <img src="" alt="" class="catgrid__icon" />
+                  <span class="catgrid__name">Remote Play Together</span>
+                  <img src="/assets/img/category-icon55.png" alt="Remote Play Together" class="catgrid__icon" />
                 </a>
               </li>
               <li class="catgrid__cat">
                 <a href="" class="catgrid__a">
                   <img src="/assets/img/category-background15.jpg" alt="" class="catgrid__background" />
-                  <span class="catgrid__name">Acción</span>
-                  <img src="" alt="" class="catgrid__icon" />
+                  <span class="catgrid__name">Simulación</span>
+                  <img src="/assets/img/category-icon15.png" alt="Simulación" class="catgrid__icon" />
                 </a>
               </li>
               <li class="catgrid__cat">
                 <a href="" class="catgrid__a">
                   <img src="/assets/img/category-background47.jpg" alt="" class="catgrid__background" />
-                  <span class="catgrid__name">Acción</span>
-                  <img src="" alt="" class="catgrid__icon" />
+                  <span class="catgrid__name">Un solo jugador</span>
+                  <img src="/assets/img/category-icon47.png" alt="Un solo jugador" class="catgrid__icon" />
                 </a>
               </li>
               <li class="catgrid__cat">
                 <a href="" class="catgrid__a">
                   <img src="/assets/img/category-background31.jpg" alt="" class="catgrid__background" />
-                  <span class="catgrid__name">Acción</span>
-                  <img src="" alt="" class="catgrid__icon" />
+                  <span class="catgrid__name">VR</span>
+                  <img src="/assets/img/category-icon31.png" alt="VR" class="catgrid__icon" />
                 </a>
               </li>
               <li class="catgrid__cat">
                 <a href="" class="catgrid__a">
                   <img src="/assets/img/category-background18.jpg" alt="" class="catgrid__background" />
-                  <span class="catgrid__name">Acción</span>
-                  <img src="" alt="" class="catgrid__icon" />
+                  <span class="catgrid__name">Wargame</span>
+                  <img src="/assets/img/category-icon18.png" alt="Wargame" class="catgrid__icon" />
                 </a>
               </li>
             </ul>
