--- a/index.html
+++ b/index.html
@@ -1207,6 +1207,97 @@
           </div>
         </div>
       </section>
+      <div class="background__extension">
+        <div class="background__wrapper narrow__wrapper">
+          <div class="background__container content">
+            <h4 class="content__title">¡Muestra nuestros precios en tus webs favoritas!</h4>
+            <p class="content__p">¡Funciona en Steam, Twitch, Amazon, YouTube y más!</p>
+            <a href="https://chrome.google.com/webstore/detail/instant-gaming/lbnoedlobifdhbpjkcfhcbdcjhampmne" class="content__link">Consigue la extensión de Instant Gaming</a>
+          </div>
+          <div class="background__img"></div>
+        </div>
+      </div>
+      <section class="categories__section">
+        <div class="categories__wrapper narrow__wrapper">
+          <div class="categories__column">
+            <h2 class="categories__h2">Las ofertas de la semana</h2>
+            <ul class="listingweek__ul listingweek">
+              <li class="listingweek__li">
+                <article class="listingweek__article">
+                  <a href="https://www.instant-gaming.com/es/12613-comprar-soul-hackers-2-digital-deluxe-edition-digital-deluxe-edition-pc-game-steam-europe/" class="listingweek__link">
+                    <img src="/assets/img/soul-hackers-2-digital-deluxe-edition-digital-deluxe-edition-pc-game-steam-europe-cover.jpg" alt="Soul Hackers 2 - Digital Deluxe Edition" class="listingweek__img" />
+                    <video class="listingweek__video" preload="none" loop muted playsinline src="/assets/video/soul-hackers-2-digital-deluxe-edition-digital-deluxe-edition-pc-game-steam-europe-preview.webm" type="video/webm"></video>
+                    <div class="listingweek__timer">
+                      <span class="listingweek__span">Quedan 2 días</span>
+                    </div>
+                    <div class="listingweek__discount">-71%</div>
+                  </a>
+                  <div class="listingweek__info">
+                    <h3 class="listingweek__name">Soul Hackers 2 - Digital Deluxe Edition</h3>
+                    <span class="listingweek__offer">69.99€</span>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="listingweek__svg" viewBox="0 0 16 16">
+                      <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                    </svg>
+                    <span class="listingweek__offer">49.99€</span>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="listingweek__svg" viewBox="0 0 16 16">
+                      <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                    </svg>
+                    <span class="listingweek__price">19.99€</span>
+                  </div>
+                </article>
+              </li>
+              <li class="listingweek__li">
+                <article class="listingweek__article">
+                  <a href="https://www.instant-gaming.com/es/14373-comprar-payday-3-gold-edition-gold-edition-pc-game-steam/" class="listingweek__link">
+                    <img src="/assets/img/payday-3-gold-edition-gold-edition-pc-game-steam-cover.jpg" alt="Payday 3 Gold Edition" class="listingweek__img" />
+                    <video class="listingweek__video" preload="none" loop muted playsinline src="/assets/video/payday-3-gold-edition-gold-edition-pc-game-steam-preview.webm" type="video/webm"></video>
+                    <div class="listingweek__timer">
+                      <span class="listingweek__span">Quedan 4 días</span>
+                    </div>
+                    <div class="listingweek__discount">-47%</div>
+                  </a>
+                  <div class="listingweek__info">
+                    <h3 class="listingweek__name">Payday 3 Gold Edition</h3>
+                    <span class="listingweek__offer">89.99€</span>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="listingweek__svg" viewBox="0 0 16 16">
+                      <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                    </svg>
+                    <span class="listingweek__offer">64.96€</span>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="listingweek__svg" viewBox="0 0 16 16">
+                      <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                    </svg>
+                    <span class="listingweek__price">47.99€</span>
+                  </div>
+                </article>
+              </li>
+              <li class="listingweek__li">
+                <article class="listingweek__article">
+                  <a href="https://www.instant-gaming.com/es/1839-comprar-system-shock-pc-game-steam/" class="listingweek__link">
+                    <img src="/assets/img/system-shock-pc-game-steam-cover.jpg" alt="System Shock" class="listingweek__img" />
+                    <video class="listingweek__video" preload="none" loop muted playsinline src="/assets/video/system-shock-pc-game-steam-preview.webm" type="video/webm"></video>
+                    <div class="listingweek__timer">
+                      <span class="listingweek__span">Quedan 7 días</span>
+                    </div>
+                    <div class="listingweek__discount">-58%</div>
+                  </a>
+                  <div class="listingweek__info">
+                    <h3 class="listingweek__name">System Shock</h3>
+                    <span class="listingweek__offer">39.99€</span>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="listingweek__svg" viewBox="0 0 16 16">
+                      <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                    </svg>
+                    <span class="listingweek__offer">16.99€</span>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="listingweek__svg" viewBox="0 0 16 16">
+                      <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                    </svg>
+                    <span class="listingweek__price">16.99€</span>
+                  </div>
+                </article>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
