--- a/index.html
+++ b/index.html
@@ -1217,11 +1217,11 @@
           <div class="background__img"></div>
         </div>
       </div>
-      <section class="categories__section">
-        <div class="categories__wrapper narrow__wrapper">
-          <div class="categories__column">
-            <h2 class="categories__h2">Las ofertas de la semana</h2>
-            <ul class="listingweek__ul listingweek">
+      <section class="weeklyoffers__section">
+        <div class="weeklyoffers__wrapper narrow__wrapper">
+          <div class="weeklyoffers__column">
+            <h2 class="weeklyoffers__h2">Las ofertas de la semana</h2>
+            <ul class="weeklyoffers__ul listingweek">
               <li class="listingweek__li">
                 <article class="listingweek__article">
                   <a href="https://www.instant-gaming.com/es/12613-comprar-soul-hackers-2-digital-deluxe-edition-digital-deluxe-edition-pc-game-steam-europe/" class="listingweek__link">
@@ -1295,6 +1295,16 @@
                 </article>
               </li>
             </ul>
+          </div>
+        </div>
+      </section>
+      <section class="actions__section">
+        <div class="actions__wrapper narrow__wrapper">
+          <div class="actions__column">
+            <img src="/assets/img/icon-send.png" alt="Send" class="actions__img" />
+            <h5 class="actions__h5">¡No te pierdas ninguna oferta o promoción!</h5>
+            <span class="actions__span">¡Y sé el primero en recibir nuestras ofertas privadas, newsletters y promociones de la semana!</span>
+            <a href="https://www.instant-gaming.com/es/mi-cuenta/#user-profile-settings-communication" class="actions__link">¡Suscríbete!</a>
           </div>
         </div>
       </section>
