--- a/index.html
+++ b/index.html
@@ -1308,6 +1308,53 @@
           </div>
         </div>
       </section>
+      <footer class="footer">
+        <div class="footer__wrapper narrow__wrapper">
+          <div class="footer__trust trust">
+            <a href="https://es.trustpilot.com/review/instant-gaming.com?utm_medium=trustbox&utm_source=Mini" class="trust__link">
+              <img src="/assets/img/logo-white.svg" alt="Trustpilot" class="trust__title" />
+              <img src="/assets/img/stars-4.5.svg" alt="Trustpilot stars" class="trust__stars" />
+              <span class="trust__score">Trust Score <strong>4.7</strong> | <strong>667.583 </strong>opiniones</span>
+            </a>
+          </div>
+          <div class="footer__terms terms">
+            <ul class="terms__ul">
+              <li class="terms__li"><a href="https://www.instant-gaming.com/es/terminos-y-condiciones/" class="terms__link">Términos y condiciones</a></li>
+              <li class="terms__li"><a href="https://www.instant-gaming.com/es/politicas-de-privacidad/" class="terms__link">Política de privacidad</a></li>
+              <li class="terms__li"><a href="https://www.instant-gaming.com/es/contactanos/" class="terms__link">Contacto</a></li>
+              <li class="terms__li"><a href="https://www.instant-gaming.com/es/preguntas-mas-frecuentes/" class="terms__link">FAQ</a></li>
+              <li class="terms__li">
+                <a href="https://www.instant-gaming.com/es/preguntas-mas-frecuentes/" class="terms__link"><svg xmlns="http://www.w3.org/2000/svg" class="terms__svg" viewBox="0 0 16 16">
+                  <path d="M3 2.5a2.5 2.5 0 0 1 5 0 2.5 2.5 0 0 1 5 0v.006c0 .07 0 .27-.038.494H15a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1v7.5a1.5 1.5 0 0 1-1.5 1.5h-11A1.5 1.5 0 0 1 1 14.5V7a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h2.038A3 3 0 0 1 3 2.506zm1.068.5H7v-.5a1.5 1.5 0 1 0-3 0c0 .085.002.274.045.43zM9 3h2.932l.023-.07c.043-.156.045-.345.045-.43a1.5 1.5 0 0 0-3 0zM1 4v2h6V4zm8 0v2h6V4zm5 3H9v8h4.5a.5.5 0 0 0 .5-.5zm-7 8V7H2v7.5a.5.5 0 0 0 .5.5z" />
+                </svg>
+                <a href="https://www.instant-gaming.com/es/redeem/" class="terms__link">Canjear una tarjeta regalo</a>
+              </li>
+              <li class="terms__li">
+                <a href="https://www.instant-gaming.com/es/preguntas-mas-frecuentes/" class="terms__link"><svg xmlns="http://www.w3.org/2000/svg" class="terms__svg" viewBox="0 0 16 16">
+                  <path d="M0 2.5A1.5 1.5 0 0 1 1.5 1h11A1.5 1.5 0 0 1 14 2.5v10.528c0 .3-.05.654-.238.972h.738a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 1 1 0v9a1.5 1.5 0 0 1-1.5 1.5H1.497A1.497 1.497 0 0 1 0 13.5zM12 14c.37 0 .654-.211.853-.441.092-.106.147-.279.147-.531V2.5a.5.5 0 0 0-.5-.5h-11a.5.5 0 0 0-.5.5v11c0 .278.223.5.497.5z" />
+                  <path d="M2 3h10v2H2zm0 3h4v3H2zm0 4h4v1H2zm0 2h4v1H2zm5-6h2v1H7zm3 0h2v1h-2zM7 8h2v1H7zm3 0h2v1h-2zm-3 2h2v1H7zm3 0h2v1h-2zm-3 2h2v1H7zm3 0h2v1h-2z" />
+                </svg>
+                <a href="https://www.instant-gaming.com/es/redeem/" class="terms__link">Descubre las últimas noticias de videojuegos</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__rrss rrss">
+            <div class="rrss__div">
+              <img src="/assets/img/icon-dcr.png" alt="Discord" class="rrss__icon">
+              <img src="/assets/img/icon-xcom.png" alt="Discord" class="rrss__icon">
+              <img src="/assets/img/icon-igr.png" alt="Discord" class="rrss__icon">
+              <img src="/assets/img/icon-fb.png" alt="Discord" class="rrss__icon">
+              <img src="/assets/img/icon-yt.png" alt="Discord" class="rrss__icon">
+              <img src="/assets/img/icon-tch.png" alt="Discord" class="rrss__icon">
+              <img src="/assets/img/icon-extension.png" alt="Discord" class="rrss__icon">
+            </div>
+            <div class="rrss__apps">
+              <img src="/assets/img/apple.png" alt="Apple" class="rrss__img">
+              <img src="/assets/img/android.png" alt="Android" class="rrss__img">
+            </div>
+          </div>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
