--- a/index.html
+++ b/index.html
@@ -289,19 +289,21 @@
             <source srcset="/assets/img/gta6-1000.jpg" media="(max-width: 1000px)" />
             <source srcset="/assets/img/gta6-1400.jpg" media="(max-width: 1400px)" />
             <source srcset="/assets/img/gta6-1920.jpg" media="(max-width: 1920px)" />
-            <img src="/assets/img/gta6.jpg" alt="Grand Thief Auto 6" />
+            <img class="background__picture" src="/assets/img/gta6.jpg" alt="Grand Thief Auto 6" />
           </picture>
         </a>
       </div>
       <section class="trends__section">
         <div class="trends__wrapper narrow__wrapper">
           <div class="trends__column">
-            <a href="https://www.instant-gaming.com/es/busquedas/" class="trends__link">
-              <h2 class="trends__h2">Tendencias</h2>
-              <svg xmlns="http://www.w3.org/2000/svg" class="trends__svg" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
-              </svg>
-            </a>
+            <div class="trends__compensation">
+              <a href="https://www.instant-gaming.com/es/busquedas/" class="trends__link">
+                <h2 class="trends__h2">Tendencias</h2>
+                <svg xmlns="http://www.w3.org/2000/svg" class="trends__svg" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                </svg>
+              </a>
+            </div>
 
             <ul class="trends__container listing">
               <li class="listing__li">
@@ -474,12 +476,14 @@
       <section class="reservations__section">
         <div class="reservations__wrapper narrow__wrapper">
           <div class="reservations__column">
-            <a href="https://www.instant-gaming.com/es/reservas/" class="reservations__link">
-              <h2 class="reservations__h2">Reservas</h2>
-              <svg xmlns="http://www.w3.org/2000/svg" class="reservations__svg" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
-              </svg>
-            </a>
+            <div class="reservations__compensation">
+              <a href="https://www.instant-gaming.com/es/reservas/" class="reservations__link">
+                <h2 class="reservations__h2">Reservas</h2>
+                <svg xmlns="http://www.w3.org/2000/svg" class="reservations__svg" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                </svg>
+              </a>
+            </div>
 
             <ul class="reservations__container listing">
               <li class="listing__li">
@@ -675,12 +679,14 @@
       <section class="bestseller__section">
         <div class="bestseller__wrapper narrow__wrapper">
           <div class="bestseller__column">
-            <a href="https://www.instant-gaming.com/es/mas-vendidos/" class="bestseller__link">
-              <h2 class="bestseller__h2">Más vendidos</h2>
-              <svg xmlns="http://www.w3.org/2000/svg" class="bestseller__svg" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
-              </svg>
-            </a>
+            <div class="bestseller__compensation">
+              <a href="https://www.instant-gaming.com/es/mas-vendidos/" class="bestseller__link">
+                <h2 class="bestseller__h2">Más vendidos</h2>
+                <svg xmlns="http://www.w3.org/2000/svg" class="bestseller__svg" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                </svg>
+              </a>
+            </div>
 
             <ul class="bestseller__container listing">
               <li class="listing__li">
@@ -821,19 +827,21 @@
             <source srcset="/assets/img/2075-1000.jpg" media="(max-width: 1000px)" />
             <source srcset="/assets/img/2075-1400.jpg" media="(max-width: 1400px)" />
             <source srcset="/assets/img/2075-1920.jpg" media="(max-width: 1920px)" />
-            <img src="/assets/img/2075.jpg" alt="Ready or Not" />
+            <img class="background__picture" src="/assets/img/2075.jpg" alt="Ready or Not" />
           </picture>
         </a>
       </div>
       <section class="reviews__section">
         <div class="reviews__wrapper narrow__wrapper">
           <div class="reviews__column">
-            <a href="https://www.instant-gaming.com/es/mas-vendidos/" class="reviews__link">
-              <h2 class="reviews__h2">Últimas reviews</h2>
-              <svg xmlns="http://www.w3.org/2000/svg" class="reviews__svg" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
-              </svg>
-            </a>
+            <div class="reviews__compensation">
+              <a href="https://www.instant-gaming.com/es/mas-vendidos/" class="reviews__link">
+                <h2 class="reviews__h2">Últimas reviews</h2>
+                <svg xmlns="http://www.w3.org/2000/svg" class="reviews__svg" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                </svg>
+              </a>
+            </div>
           </div>
         </div>
         <ul class="reviews__container cards">
@@ -970,12 +978,14 @@
       <section class="news__section">
         <div class="news__wrapper narrow__wrapper">
           <div class="news__column">
-            <a href="https://www.instant-gaming.com/es/busquedas/" class="news__link">
-              <h2 class="news__h2">Noticias que no te puedes perder</h2>
-              <svg xmlns="http://www.w3.org/2000/svg" class="news__svg" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
-              </svg>
-            </a>
+            <div class="news__compensation">
+              <a href="https://www.instant-gaming.com/es/busquedas/" class="news__link">
+                <h2 class="news__h2">Noticias que no te puedes perder</h2>
+                <svg xmlns="http://www.w3.org/2000/svg" class="news__svg" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                </svg>
+              </a>
+            </div>
 
             <ul class="news__container listingnews">
               <li class="news__li">
