--- a/index.html
+++ b/index.html
@@ -271,6 +271,42 @@
                 <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1" />
               </svg>
             </a>
+
+            <div class="login__screen">
+              <div class="login__panel">
+                <div class="login__signup">
+                  <h2 class="login__h2">Inicia sesión</h2>
+                  <div class="login__connections">
+                    <a href="#" class="login__a facebook"><img src="/assets/img/login-fb.png" alt="Facebook" class="login__icon" loading="lazy" /></a>
+                    <a href="#" class="login__a google"><img src="/assets/img/login-google.png" alt="Google" class="login__icon" loading="lazy" /></a>
+                    <a href="#" class="login__a apple"><img src="/assets/img/login-apple.png" alt="Apple" class="login__icon" loading="lazy" /></a>
+                    <a href="#" class="login__a discord"><img src="/assets/img/login-discord.png" alt="Discord" class="login__icon" loading="lazy" /></a>
+                  </div>
+                  <div class="login__separator">
+                    <div class="login__bar"></div>
+                    <span class="login__span">o</span>
+                    <div class="login__bar"></div>
+                  </div>
+                  <form action="https://www.instant-gaming.com/es/" class="login__form" method="post">
+                    <input id="form__email" type="email" name="email" placeholder="Email" required />
+                    <input id="form__password" type="password" name="password" placeholder="**********" required />
+                    <button id="form__submit">Iniciar sesión</button>
+                    <div class="form__forgot">
+                      <a href="https://www.instant-gaming.com/es/crea-tu-cuenta/" class="form__recovering">¿No tienes una cuenta?</a>
+                      <a href="https://www.instant-gaming.com/es/contrasenas-olvidadas/" class="form__recovering">¿Has olvidado la contraseña?</a>
+                    </div>
+                  </form>
+                </div>
+              </div>
+              <div class="login__bg">
+                <img src="/assets/img/wallpaper.jpg" alt="Login" class="login__img" loading="lazy" />
+              </div>
+              <button class="login__close">
+                <svg class="login__svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                  <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708" />
+                </svg>
+              </button>
+            </div>
           </div>
         </div>
       </div>
