--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
               </svg>
             </a>
 
-            <div class="login__screen">
+            <div class="login__screen is">
               <div class="login__panel">
                 <div class="login__signup">
                   <h2 class="login__h2">Inicia sesión</h2>
