--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Instant-Gaming.com - Juegos PC/MAC hasta 70% de descuento! Códigos digitales, entrega inmediata, 24/7</title>
     <meta name="description" content="Instant-Gaming.com - Tus juegos favoritos para Steam, Origin, Battle.net, Uplay y juegos Indie hasta el 70% de descuento! ¡Códigos digitales, entrega inmediata 24/7!" />
 
-    <link rel="stylesheet" href="/css/index.css" />
-    <script src="/js/index.js" defer></script>
+    <link rel="stylesheet" href="css/index.css" />
+    <script src="js/index.js" defer></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
